# ECS_Example

./: .gitignore  CMakeLists.txt  ECSExample.cpp  ECSExample.h  README.md  main.cpp
Source/: ECSPch.h
Source/Component/: EntityObject.ixx  IComponent.ixx  Pc.ixx  Position.ixx  Sender.ixx  Types.ixx
Source/Object/: EntityObject.ixx  Npc.ixx  Pc.ixx  WorldObject.ixx
Source/Protocol/: Packet.ixx
Source/System/: CommandSystem.cpp  CommandSystem.ixx  ISystem.ixx  MovementSystem.cpp  MovementSystem.ixx  SightSystem.ixx  SpawnSystem.cpp  SpawnSystem.ixx
Source/World/: Cell.cpp  Cell.ixx  World.cpp  World.ixx
